<resources>
    <string name="app_name">Minigame collection</string>
    <string name="def_web_client_id">618279564838-s44dlundn9fpj316i75m0c30elmlfej0.apps.googleusercontent.com</string>
    <string name="snake_name">Snake</string>
    <string name="global_rank">Global Rank:</string>
    <string name="tetris_name">Tetris</string>
    <string name="trivia_name">Trivia</string>
    <string name="speedtest_name">Speed test</string>
    <string name="navigation_drawer_open">Navigation drawer open</string>
    <string name="navigation_drawer_close">Navigation drawer close</string>
    <string name="avatar">Avatar</string>
    <string name="game_image">Game image</string>
    <string name="game_preferences">Game Preferences</string>
    <string name="settings">Settings</string>
    <string name="log_in">Log in</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="logged_in_as">Logged in as:</string>
    <string name="log_out">Log out</string>
    <string name="log_in_to_see_ranking">Log in to see ranking</string>
    <string name="view_all_leaderboards">View all leaderboards</string>
    <string name="points">Points</string>
    <string name="start_the_game">Start the game</string>
    <string name="_0">0</string>
    <string name="new_highscore">New High Score!</string>
    <string name="title_activity_game_preferences">GamePreferencesActivity</string>
    <string name="settings_header">App Settings</string>
    <string name="game_preferences_header">Game Settings</string>
    <string name="language_title">Language</string>
    <string name="theme_title">Theme</string>
    <string name="controls_title">Controls</string>
    <string name="trivia_quiz">Trivia Quiz</string>
    <string name="choose_category">Choose a category</string>
    <string name="games">Games</string>
    <string name="sports">Sports</string>
    <string name="music">Music</string>
    <string name="cars">Cars</string>
    <string name="countries">Countries</string>
    <string name="game">Game</string>
    <string name="sport">Sport</string>
    <string name="car">Car</string>
    <string name="country">Country</string>
    <string name="question_will_be_displayed_here">Question will be displayed here</string>
    <string name="option_one">Option 1</string>
    <string name="option_two">Option 2</string>
    <string name="option_three">Option 3</string>
    <string name="option_four">Option 4</string>
    <string name="you_can_do_better">You can do better!</string>
    <string name="good_job">Good job!</string>
    <string name="excellent_job">Excellent job!</string>
    <string name="you_got">You got</string>
    <string name="back_to_categories">Back to categories</string>
    <string name="user_info">User info</string>
    <string name="up">Up</string>
    <string name="right">Right</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="score_atm">Score: </string>
    <string name="game_over">Game over!</string>
    <string name="your_score_was">Your score was:</string>
    <string name="game_ended_because">Game ended because </string>
    <string name="play_again">Play Again</string>
    <string name="game_paused">Game Paused</string>
    <string name="press_any_button_to_start_game">Press any button to start the game!</string>
    <string name="snake_hit_its_own_tail">Snake hit its own tail</string>
    <string name="snake_hit_a_wall">Snake hit a wall</string>
    <string name="english">English</string>
    <string name="finnish">Finnish</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="buttons">Buttons</string>
    <string name="swipe">Swipe</string>
    <string name="leaderboard">leaderboard</string>
    <string name="leave">leave</string>
    <string name="tetris_start">start</string>
    <string name="t_tetris">TETRIS</string>
    <string name="tetris_current_score">current score</string>
    <string name="tetris_high_score">high score</string>
    <string name="tetris_restart">restart</string>
    <string name="unranked">Unranked</string>
    <string name="select_leaderboard_to_view">Please select a leaderboard to view...</string>
    <string name="rank">Rank</string>
    <string name="score">Score</string>
    <string name="username">Username</string>
    <string name="you">You</string>
</resources>