<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/settings_header">

        <ListPreference
            app:key="language"
            app:title="@string/language_title"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:defaultValue="English"
            app:useSimpleSummaryProvider="true"/>

        <ListPreference
            app:key="theme"
            app:title="@string/theme_title"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:defaultValue="Light"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/game_preferences_header">

        <ListPreference
            app:key="Controls"
            app:title="@string/controls_title"
            app:entries="@array/controls_entries"
            app:entryValues="@array/controls_values"
            app:defaultValue="Buttons"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

</PreferenceScreen>