<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Leaderboards">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonSelectTrivia"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/trivia_name" />

        <Button
            android:id="@+id/buttonSelectSpeed"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:text="@string/speedtest_name" />

        <Button
            android:id="@+id/buttonSelectSnake"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/snake_name" />

        <Button
            android:id="@+id/buttonSelectTetris"
            android:layout_width="86dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/tetris_name" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewLeaderboard"
        android:layout_width="347dp"
        android:layout_height="558dp"
        android:text="@string/select_leaderboard_to_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907" />
</androidx.constraintlayout.widget.ConstraintLayout>