<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mobiilikehitysprojekti.ResultFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/resultConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lavender">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <TextView
                android:id="@+id/highScoreText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/new_highscore"
                android:textSize="35sp"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/resultText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/good_job"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/resultImage"
                android:layout_width="160dp"
                android:layout_height="160dp"
                app:layout_constraintBottom_toTopOf="@+id/backToCategoriesButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_sports_esports_24" />

            <TextView
                android:id="@+id/resultPoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/you_got"
                android:textSize="22sp" />

            <Button
                android:id="@+id/backToCategoriesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_to_categories"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/resultImage" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>