<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/lavender"
    tools:context=".GameSpeed">

    <TextView
        android:id="@+id/tvPointCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/_0"
        android:textColor="@color/black"
        android:textSize="90sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHighScoreSpeedGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/new_highscore"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPointCounter" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStartSpeedGame"
        android:backgroundTint="@color/teal_700"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        android:text="@string/start_the_game"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRed"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeWidth="8dp"
            android:layout_width="150dp"
            android:layout_height="160dp"
            android:layout_marginEnd="10dp"
            app:cornerRadius="75dp"
            android:backgroundTint="@color/red_200" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnYellow"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeWidth="8dp"
            android:layout_width="150dp"
            android:layout_height="160dp"
            android:layout_marginStart="10dp"
            app:cornerRadius="75dp"
            android:backgroundTint="@color/yellow_100" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGreen"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeWidth="8dp"
            android:layout_width="150dp"
            android:layout_height="160dp"
            android:layout_marginEnd="10dp"
            app:cornerRadius="75dp"
            android:backgroundTint="@color/green_200" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOrange"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeWidth="8dp"
            android:layout_width="150dp"
            android:layout_height="160dp"
            android:layout_marginStart="10dp"
            app:cornerRadius="75dp"
            android:backgroundTint="@color/orange_100" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>